	  - anti-matter vortex

	* renamed monsters:
	  - black Angels to dark Angels

	* new monsters:
	  - locusts (from SporkHack)
	  - weeping angels
	  - weeping archangels
	  - deep orcs
	  - evil eyes
	  - shambling horrors (from Sporkhack)
	  - dungeon ferns, sprouts, and spores
	  - arctic ferns, sprouts, and spores
	  - blazing ferns, sprouts, and spores
	  - swamp ferns, sprouts, and spores

	* dungeon layout:
	  - length of Town branch reduced and special filler level added
	  - new branch: The Ruins of Moria

	* new levels:
	  - Black market version with One-eyed Sam promoted to management
	  - Special non-persistent level in the Ruins of Moria branch

	* Options:
	  - default of sortloot changed to 'loot'
	  - Allow exact numbers in STATUSCOLOR settings (from NAO)
	  - Permanent hallucination option: perma_hallu
	  - New option: wound_message. Healers can recieve Crawl-style damage
	    messages indicating the current health of their foes

	* Role differentiation:
	  - Tourists get automatic typ identification for shop items
	  - Healers can see how wounded monsters are (by L)
	  - Knights get a weight bonus for body armor heavier than
	      studded leather armor

	* Skill changes
	  - Skill gain for spells is faster than skill gain for weapons
	  - Riding skill is exercised more quickly, closer to vanilla

	* user interface improvements:
	  - HP notify, showing HP changes in the message area (from NAO)
	  - Menus made aware of the maximum count of an item (by heinrich5991)
	  - Message for some monster cancellation events
	  - When standing on Elbereth, show it in status lines
	  - New paranoid options: paranoid_lava and paranoid_water, asks for
	      confirmation before walking into known lava and water squares
	  - Automatically ask whether to unlock when #looting a locked container
	      and carrying an unlocking tool (from UnNetHackPlus)
	  - Show remaining memory in spellcasting menu as percentage (from AceHack)