@@ -1284,6 +1284,22 @@ demon
 	them difficult to deal with, even on the rare occasions when
 	they are friendly.
 	[ The Tough Guide to Fantasyland, by Diana Wynne Jones ]
+devil*snare
+	"Stop moving!" Hermione ordered them. "I know what this is --
+	it's Devil's Snare!"
+	"Oh, I'm so glad we know what it's called, that's a great help,"
+	snarled Ron, leaning back, trying to stop the plant from curling
+	around his neck.
+	"Shut up, I'm trying to remember how to kill it!" said Hermione.
+	"Well, hurry up, I can't breathe!" Harry gasped, wrestling with
+	it as it curled around his chest.
+	"Devil's Snare, Devil's Snare . . . what did Professor Sprout
+	say? -- it likes the dark and the damp --"
+	"So light a fire!" Harry choked.
+	"Yes -- of course -- but there's no wood!" Hermione cried,
+	wringing her hands.
+	"HAVE YOU GONE MAD?" Ron bellowed. "ARE YOU A WITCH OR NOT?"
+	  [ Harry Potter and the Philosopher's Stone, by J. K. Rowling ]
 diamond
 	The hardest known mineral (with a hardness of 10 on Mohs' scale). It
 	is an allotropic form of pure carbon that has crystallized in the
